--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
         <url>scm:git:git@github.com:${github.account}/game-of-life.git</url>
     </scm>
     <build>
+    <plugins>
+        <plugin>
+            <groupId>external.atlassian.jgitflow</groupId>
+            <artifactId>jgitflow-maven-plugin</artifactId>
+            <version>1.0-m5.1</version>
+            <configuration>
+                <!-- see goals wiki page for configuration options -->
+            </configuration>
+        </plugin>
+    </plugins>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
